--- a/join_aaup.html
+++ b/join_aaup.html
@@ -167,7 +167,7 @@
           </div>
         </div>
 		<div class="col-md-4">
-		<img src="assets/Images/DSC_0248.jpg" style = "width: 90%; max-width: 400px; ">
+		<img src="assets/Images/DSC_0248.JPG" style = "width: 90%; max-width: 400px; ">
 		</div>
       </div>
     </section>
