--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </head>
 <body id="grad1">
+  <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: fixed; width: 100%; height: 3em; z-index: 1; overflow-x: auto;">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+	  <span area-hidden="true">&times;</span>
+	</button>
+    <strong>IMPORTANT:</strong> If you have recently traveled abroad and have been asked to turn in a personal/work electronic device for inspection, please check <a href="https://www.aaup.org/faqs/border-searches" class="alert-link" target="_blank"> this link</a>.
+  </div>
   <div id="fb-root"></div>
   <div class="light-blue" style="margin-bottom: -20px;">
     <nav class="navbar">
